[package]
name = "pokerhaand"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.41"
envy = "0.4.2"
eyre = "0.6.12"
rand = "0.9.1"
rand_chacha = "0.9.0"
rand_seeder = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite", "uuid"] }
tokio = "1.45.0"
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[dev-dependencies]
tower = "0.5.2"
